--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-gesture-handler": "^1.0.12",
+    "react-native-image-picker": "^0.27.2",
     "react-native-localization": "^2.0.3",
     "react-native-paper": "^2.4.0",
     "react-native-push-notification": "^3.1.2",
