--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-gesture-handler": "^1.0.12",
     "react-native-image-picker": "^0.27.2",
     "react-native-localization": "^2.0.3",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^2.4.0",
     "react-native-push-notification": "^3.1.2",
     "react-native-scrollable-tab-view": "^0.10.0",
