--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   },
   "dependencies": {
     "firebase": "^5.7.2",
-    "jspdf": "^1.5.3",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
     "moment": "^2.23.0",
@@ -44,11 +43,13 @@
     "react-native-image-picker": "^0.27.2",
     "react-native-localization": "^2.0.3",
     "react-native-material-dropdown": "^0.11.1",
-    "react-native-paper": "^2.4.0",
+    "react-native-paper": "^2.11.1",
+    "react-native-picker-select": "^6.0.0",
     "react-native-push-notification": "^3.1.2",
     "react-native-scrollable-tab-view": "^0.10.0",
     "react-native-splash-screen": "^3.1.1",
     "react-native-status-bar-height": "^2.2.0",
+    "react-native-table-component": "^1.2.0",
     "react-native-underline-tabbar": "^1.3.6",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.8",
